# gwtf

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  readthedocs.yml
.github/workflows/: publish.yml
docs/: conf.py  index.rst  installation.rst  requirements.txt
emri/: multimode.ipynb
examples/: Parameter_estimation.ipynb  multimode.ipynb  quickstart.ipynb  taylort3.ipynb
src/pygwtf/: __init__.py  backend.py  constants.py  generator.py  utils.py
src/pygwtf/fresnel/: common.py  kernel.py  search_kernels.py
src/pygwtf/models/: __init__.py  base.py
src/pygwtf/models/taylorf2ecc/: common.py  model.py
src/pygwtf/models/taylort2ecc/: __init__.py  common.py  model.py
src/pygwtf/models/taylort3spin/: __init__.py  common.py  model.py
src/pygwtf/response/: orbits.py  transfer.py
