[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pygwtf"
description = "Waveform generation and likelihood approximations for slowly-evolving GW sources in the time-frequency domain."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Christian Chapman-Bird" }, { name = "Diganta Bandopadhyay" }]
dependencies = [
    "scipy",
    "matplotlib",
    "numpy",
    "numba",
    "lisaconstants",
    "astropy",
    "h5py",
]
dynamic = [
    "version"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "pre-commit",
    {include-group = "test"},
]


[project.urls]
Homepage = "https://github.com/cchapmanbird/gwtf"
Repository = "https://github.com/cchapmanbird/gwtf"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sequince*"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
extend-select = ["I"]
